2007-10-17  Michael Stucki  <michael@typo3.org>

	* Fixed bug #6121: Reply-To field in formmails can contain invalid characters if formMailCharset different from site charset (patch by Wolfgang Zenker)
	* Fixed bug #6533: Wrong naming of version number levels in Extension Manager

2007-10-17  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Fixed bug #6202: Company field is missing for table fe_users in "View Item" (Thanks to Christian Kuhn)

2007-10-16  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3552: Fatal error during backend edit
	* Fixed bug #6193: Object copied in t3lib_div::makeInstance()

2007-10-16  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* (minor) Fixed bug #6138: Prevent recursive inclusion of external TypoScript files (patch by Martin Ficzel) - Fixed problems in patch from 2007-10-15

2007-10-16  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug 4183: Incorrect display in htmlArea RTE of utf-8 labels for colors, classes and fonts defined in PageTSConfig
	* Re-inserting accidently deleted comments in class.tx_rtehtmlarea_base.php.
	* Fixed bug 4525: In htmlArea RTE, disabling personal dictionaries in UserTSConfig not honored

2007-10-15  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug 5855: Missing unlink icon in htmlArea RTE
	* Fixed bug 5839: In htmlArea RTE, paragraph & text dropdown boxes inactive when using @media clause in stylesheet
	* Fixed bug 6152: AllowClipboard helper offered by htmlArea RTE doesn't work with 2.0.0.x Firefox
	* Fixed bug 6340: rtehtmlarea not working with "Editforms on page" option
	* Fixed bug 6152: Nullify default value AllowClipboard helper and use TYPO3-specific Firefox extension
	* Update version number of rtehtmlarea to 1.6.2dev

2007-10-15  Michael Stucki  <michael@typo3.org>
