@@ -47,28 +47,34 @@ $TCA['tt_content'] = Array (
 			'config' => Array (
 				'type' => 'select',
 				'items' => Array (
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.0', 'header'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.1', 'text'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.2', 'textpic'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.3', 'image'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.4', 'bullets'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.5', 'table'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.6', 'uploads'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.7', 'multimedia'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.8', 'mailform'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.9', 'search'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.10', 'login'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.11', 'splash'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.12', 'menu'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.13', 'shortcut'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.14', 'list'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.15', 'script'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.16', 'div'),
-					Array('LLL:EXT:cms/locallang_ttc.php:CType.I.17', 'html')
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.div.standard', '--div--'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.0', 'header', 'i/tt_content_header.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.1', 'text', 'i/tt_content.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.2', 'textpic', 'i/tt_content_textpic.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.3', 'image', 'i/tt_content_image.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.div.lists', '--div--'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.4', 'bullets', 'i/tt_content_bullets.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.5', 'table', 'i/tt_content_table.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.6', 'uploads', 'i/tt_content_uploads.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.div.forms', '--div--'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.8', 'mailform', 'i/tt_content_form.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.9', 'search', 'i/tt_content_search.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.10', 'login', 'i/tt_content_login.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.div.special', '--div--'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.7', 'multimedia', 'i/tt_content_mm.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.11', 'splash', 'i/tt_content_news.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.12', 'menu', 'i/tt_content_menu.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.13', 'shortcut', 'i/tt_content_shortcut.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.14', 'list', 'i/tt_content_list.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.15', 'script', 'i/tt_content_script.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.16', 'div', 'i/tt_content_div.gif'),
+					array('LLL:EXT:cms/locallang_ttc.xml:CType.I.17', 'html', 'i/tt_content_html.gif')
 				),
 				'default' => 'text',
 				'authMode' => $GLOBALS['TYPO3_CONF_VARS']['BE']['explicitADmode'],
 				'authMode_enforce' => 'strict',
+				'iconsInOptionTags' => 1,
+				'noIconsBelowSelect' => 1,
 			)
 		),
 		'hidden' => Array (
